# finstrument_mock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
compiler-rt/: CMakeLists.txt
compiler-rt/include/: hook.h  hook.hpp
compiler-rt/src/: hook.cpp
example/: .gitignore  CallExpr.cpp  Makefile  _build.sh  bar.cpp  called.cpp  called.hpp  foo.cpp  foo.hpp  hook.cpp  hook.hpp  main  main.cpp
measure/: .gitignore  charts_common.py  copy_results.sh  cpu_change_freq.sh  cpu_default_freq.sh  eval.py  eval_penalty.py  eval_penalty_in_one_plot.py  eval_total_time.py  eval_total_time_in_one_plot.py  make_clean.sh  makefile.report  measure.py  measure.sh
measure/Benchmark/: functionobjects.cpp  makefile  stepanov_abstraction.cpp  stepanov_vector.cpp
measure/O0/: makefile  report.txt
measure/O0__finstrument-functions/: machine.cpp  makefile  report.txt
measure/O0__finstrument-functions__fno-inline-functions/: makefile  report.txt  trace.cpp
measure/O0__fsanitize_mock/: makefile  report.txt
measure/O0__fsanitize_mock__DSUB/: makefile  report.txt
measure/O0__fsanitize_mock__fno-inline-functions/: makefile  report.txt
measure/O0__fsanitize_mock__fno-inline-functions__DSUB/: makefile  report.txt  stepanov_abstraction.cpp  stepanov_vector.cpp
measure/O2/: makefile  report.txt
measure/O2__finstrument-functions/: makefile  report.txt
measure/O2__finstrument-functions__fno-inline-functions/: makefile  report.txt
measure/O2__fsanitize_mock/: makefile  report.txt
measure/O2__fsanitize_mock__DSUB/: makefile  report.txt
measure/O2__fsanitize_mock__fno-inline-functions/: .gitignore  makefile  report.txt
measure/O2__fsanitize_mock__fno-inline-functions__DSUB/: functionobjects.cpp  makefile  report.txt
measure/_O2__finstrument-functions/: benchmark_timer.h  makefile  makefile.report  report.txt  stepanov_vector.cpp
measure/results_at_2800Mhz/__O0/: report.txt
measure/results_at_2800Mhz/__O0__finstrument-functions/: report.txt
measure/results_at_2800Mhz/__O0__finstrument-functions__fno-inline-functions/: report.txt
measure/results_at_2800Mhz/__O0__fsanitize_mock/: report.txt
measure/results_at_2800Mhz/__O0__fsanitize_mock__DSUB/: report.txt
measure/results_at_2800Mhz/__O0__fsanitize_mock__fno-inline-functions/: report.txt
measure/results_at_2800Mhz/__O0__fsanitize_mock__fno-inline-functions__DSUB/: report.txt
measure/results_at_2800Mhz/__O2/: report.txt
measure/results_at_2800Mhz/__O2__finstrument-functions/: report.txt
measure/results_at_2800Mhz/__O2__finstrument-functions__fno-inline-functions/: report.txt
measure/results_at_2800Mhz/__O2__fsanitize_mock/: report.txt
measure/results_at_2800Mhz/__O2__fsanitize_mock__DSUB/: report.txt
measure/results_at_2800Mhz/__O2__fsanitize_mock__fno-inline-functions/: report.txt
measure/results_at_2800Mhz/__O2__fsanitize_mock__fno-inline-functions__DSUB/: report.txt
measure/results_at_3001Mhz/__O0/: report.txt
measure/results_at_3001Mhz/__O0__finstrument-functions/: report.txt
measure/results_at_3001Mhz/__O0__finstrument-functions__fno-inline-functions/: report.txt
measure/results_at_3001Mhz/__O0__fsanitize_mock/: report.txt
measure/results_at_3001Mhz/__O0__fsanitize_mock__DSUB/: report.txt
measure/results_at_3001Mhz/__O0__fsanitize_mock__fno-inline-functions/: report.txt
measure/results_at_3001Mhz/__O0__fsanitize_mock__fno-inline-functions__DSUB/: report.txt
measure/results_at_3001Mhz/__O2/: report.txt
measure/results_at_3001Mhz/__O2__finstrument-functions/: report.txt
measure/results_at_3001Mhz/__O2__finstrument-functions__fno-inline-functions/: report.txt
measure/results_at_3001Mhz/__O2__fsanitize_mock/: report.txt
measure/results_at_3001Mhz/__O2__fsanitize_mock__DSUB/: report.txt
measure/results_at_3001Mhz/__O2__fsanitize_mock__fno-inline-functions/: report.txt
measure/results_at_3001Mhz/__O2__fsanitize_mock__fno-inline-functions__DSUB/: report.txt
misc/finstrument-functions/: main.cpp
test/: CMakeLists.txt  FooFixture.hpp  MemberCallTest.cpp  MutexTest.cpp  RAggr.cpp  RAggrTest.cpp  RintPvoidTest.cpp  RvoidPAggr.cpp  RvoidPAggrTest.cpp  RvoidPint.cpp  RvoidPintPint.cpp  RvoidPintPintTest.cpp  RvoidPintTest.cpp  RvoidPvoid.cpp  RvoidPvoidTest.cpp  X.cpp  address.hpp  called.cpp  called.hpp  foo.cpp  foo.hpp  main.cpp
test/c_language/: CMakeLists.txt  testMain.c
test/fake_targets/: CMakeLists.txt  Entity.cpp  MemberCaller.cpp  RAggrCaller.cpp  RvoidPintCaller.cpp  RvoidPintPintCaller.cpp  RvoidPvoidCaller.cpp
test/fully_instrumented/: CMakeLists.txt  Constexpr.cpp  DynamicType.cpp  DynamicTypeWithFunctionId.cpp  Entity.hpp  Entity2.hpp  ExceptionTest.cpp  FunPointer.cpp  FunPtrCaller.cpp  Lambda.cpp  MutexTest.cpp  MutexTest2.cpp  NoReturn.cpp  NoReturn.cpp.bug  Overload.cpp  RecursionTest.cpp  Template.hpp  TemplateTest.cpp  Time.cpp  __function_id.cpp  ellipsis.cpp
test/instrument_always_inline/: CMakeLists.txt  Entity.cpp  Entity.hpp  Entity2.hpp  MutexTest.cpp  MutexTest3.cpp
test/mockTurtle/: CMakeLists.txt  turtle.cpp
test/mockTurtleForIntelPin/: CMakeLists.txt  turtle.cpp
test/mockTurtleForIntelPin/IntelPin/: README  TurtleReplaceFun.cpp  makefile.rules
test/semi_instrumented/: Aggr.hpp  CMakeLists.txt  Entity.hpp  Fread.hpp  FreadTest.cpp  MemberCallTest.cpp  MutexTest.cpp  RAggrTest.cpp  RComplexPvoid.cpp  RComplexPvoidTest.cpp  RintPvoid.cpp  RintPvoidTest.cpp  RvoidPAggrTest.cpp  RvoidPintPintTest.cpp  RvoidPintTest.cpp  RvoidPvoidTest.cpp  VirtX.cpp  VirtX.hpp  VirtualMemberCallTest.cpp  X.cpp  X.hpp
test/semi_instrumented/fake_targets/: CMakeLists.txt  Fread.cpp  PhiProblem.cpp  RComplexPvoidCaller.cpp  RintPvoidCaller.cpp  RvoidPAggrCaller.cpp  RvoidPintCaller.cpp  VirtualMemberCaller.cpp
test/simple_perf_test/: CMakeLists.txt  increment.c  increment.h  no_substitution.c  substitution.c
test/simple_perf_test_fp/: CMakeLists.txt  increment.c  increment.h  no_substitution.c  substitution.c
